RESOLVED FIXED313139
RegExpSearch DFG constant folding mishandles lastIndex for global/sticky regular expressions
https://bugs.webkit.org/show_bug.cgi?id=313139
Summary RegExpSearch DFG constant folding mishandles lastIndex for global/sticky regu...
Kai Tamkun
Reported 2026-04-23 09:32:40 PDT
Attachments
Kai Tamkun
Comment 1 2026-04-23 09:39:16 PDT
EWS
Comment 2 2026-05-11 14:39:29 PDT
Committed 313029@main (4a2761ccd072): <https://commits.webkit.org/313029@main> Reviewed commits have been landed. Closing PR #63433 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.