[JSC] RegExpSearch DFG constant folding mishandles lastIndex for global/sticky regular expressions https://bugs.webkit.org/show_bug.cgi?id=313139 rdar://175066379

Reviewed by Yijia Huang.

This patch ensures RegExpSearch will always match from position 0 without changing
lastIndex in DFG constant folding, regardless of whether the regex is global or sticky.

Test: JSTests/stress/regexp-search-lastIndex.js

* JSTests/stress/regexp-search-lastIndex.js: Added.
(test1):
(test2):
(test3):
* Source/JavaScriptCore/dfg/DFGStrengthReductionPhase.cpp:
(JSC::DFG::StrengthReductionPhase::handleNode):

Canonical link: https://commits.webkit.org/313029@main